# diya.c

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  diya  diya.c  diya.h
src/: CMakeLists.txt  diya.c  diya.h  diya.test.c
